// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Header /> > It should match a snapshot when user is logged in > Logged in user 1`] = `
<body>
  <div>
    <header
      class="_headerContainer_0a265d"
    >
      <nav
        class="_navigation_0a265d"
      >
        <a
          class="_logo_0a265d"
          href="/"
        >
          eTicket
        </a>
        <div
          class="_profileIcon_a7b94c"
        >
          <p
            style="margin: auto;"
          >
            TT
          </p>
        </div>
      </nav>
    </header>
  </div>
</body>
`;

exports[`<Header /> > It should match a snapshot when user is logged out > Logged out user 1`] = `
<body>
  <div>
    <header
      class="_headerContainer_0a265d"
    >
      <nav
        class="_navigation_0a265d"
      >
        <a
          class="_logo_0a265d"
          href="/"
        >
          eTicket
        </a>
        <div
          class="_linksContainer_0a265d"
        >
          <a
            class=""
            href="/auth/signin"
          >
            Sign In
          </a>
          <a
            class=""
            href="/auth/signup"
          >
            Sign Up
          </a>
        </div>
      </nav>
    </header>
  </div>
</body>
`;
